# BitATM

./: .clang-format  .gitignore  AckHandler_8cpp.html  AckHandler_8cpp__incl.map  AckHandler_8cpp__incl.md5  AckHandler_8h.html  AckHandler_8h.js  AckHandler_8h__dep__incl.map  AckHandler_8h__dep__incl.md5  AckHandler_8h__incl.map  AckHandler_8h__incl.md5  AckHandler_8h_source.html  AesGcmStrategy_8cpp.html  AesGcmStrategy_8cpp__incl.map  AesGcmStrategy_8cpp__incl.md5  AesGcmStrategy_8h.html  AesGcmStrategy_8h.js  AesGcmStrategy_8h__dep__incl.map  AesGcmStrategy_8h__dep__incl.md5  AesGcmStrategy_8h__incl.map  AesGcmStrategy_8h__incl.md5  AesGcmStrategy_8h_source.html  AppException_8h.html  AppException_8h.js  AppException_8h__dep__incl.map  AppException_8h__dep__incl.md5  AppException_8h__incl.map  AppException_8h__incl.md5  AppException_8h_source.html  BaseAuthHandler_8cpp.html  BaseAuthHandler_8cpp__incl.map  BaseAuthHandler_8cpp__incl.md5  BaseAuthHandler_8h.html  BaseAuthHandler_8h.js  BaseAuthHandler_8h__dep__incl.map  BaseAuthHandler_8h__dep__incl.md5  BaseAuthHandler_8h__incl.map  BaseAuthHandler_8h__incl.md5  BaseAuthHandler_8h_source.html  CMakeLists.txt  (+650 more)
.github/workflows/: ci.yml  docs.yml
backend/: CMakeLists.txt  Dockerfile
backend/migrations/: 001_users.sql  002_messages.sql  003_sessions.sql  004_offline_queue.sql  005_group_messages.sql
backend/src/: AckHandler.cpp  AckHandler.h  BaseAuthHandler.cpp  BaseAuthHandler.h  ClientSession.cpp  ClientSession.h  ConversationHistory.cpp  ConversationHistory.h  DbManager.cpp  DbManager.h  GroupMessage.cpp  GroupMessage.h  ICommandHandler.h  IEntity.h  IRepository.h  KeyExchangeHandler.cpp  KeyExchangeHandler.h  LoginHandler.cpp  LoginHandler.h  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  MessageRepository.cpp  MessageRepository.h  OfflineMessage.cpp  OfflineMessage.h  OfflineQueueRepository.cpp  OfflineQueueRepository.h  PacketHandlerFactory.cpp  PacketHandlerFactory.h  ProtocolParser.cpp  ProtocolParser.h  RegisterHandler.cpp  RegisterHandler.h  Server.cpp  Server.h  Session.cpp  Session.h  SessionRepository.cpp  (+8 more)
backend/tests/: CMakeLists.txt  DbManagerTest.cpp  LoginHandlerTest.cpp  MessageHandlerTest.cpp  ProtocolParserTest.cpp
common/: AppException.h  protocol.h
frontend/: CMakeLists.txt
frontend/qml/: Main.qml
frontend/src/: AesGcmStrategy.cpp  AesGcmStrategy.h  IAsymmetricStrategy.h  ICryptoStrategy.h  ISymmetricStrategy.h  NetworkManager.cpp  NetworkManager.h  OpensslAdapter.cpp  OpensslAdapter.h  RsaOaepStrategy.cpp  RsaOaepStrategy.h  main.cpp
frontend/tests/: CMakeLists.txt  CryptoEngineTest.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+50 more)
